@@ -39,6 +39,7 @@
 #include "reggroups.h"
 #include "regset.h"
 #include "objfiles.h"
+#include "remote.h"
 
 #include "sh-tdep.h"
 
@@ -432,7 +433,7 @@ sh_sw_breakpoint_from_kind (struct gdbarch *gdbarch, int kind, int *size)
   *size = kind;
 
   /* For remote stub targets, trapa #20 is used.  */
-  if (strcmp (target_shortname, "remote") == 0)
+  if (remote_target_pushed_p ())
     {
       static unsigned char big_remote_breakpoint[] = { 0xc3, 0x20 };
       static unsigned char little_remote_breakpoint[] = { 0x20, 0xc3 };
